--- a/manuscript_service/app/assets/stylesheets/scaffolds.scss
+++ b/manuscript_service/app/assets/stylesheets/scaffolds.scss
@@ -37,7 +37,15 @@ th {
 }
 
 td {
+  // white-space: nowrap;
   padding: 0 5px 7px;
+}
+
+table {
+    width: 100%;
+}
+table th {
+    white-space: nowrap;
 }
 
 div {
