--- a/manuscript_service/app/views/view/show_result.html.erb
+++ b/manuscript_service/app/views/view/show_result.html.erb
@@ -1,23 +1,25 @@
-<h1>類似求人検索</h1>
-<%= form_tag manuscripts_path, :method => 'get' do %>
-<%= text_field_tag :search, params[:search] %>
-<%= submit_tag "Search", :name => nil %>
-<% end %>
-<table class = 'result'>
-  <thead>
-    <tr>
-      <th width='10%'>タイトル</th>
-      <th width='60%'>お仕事内容</th>
-      <th width='25%'>備考</th>
-      <!-- <th colspan="3"></th> -->
-    </tr>
-  </thead>
-  <% @manuscripts.each do |manuscript|%>
-    <tr>
-      <td><%= manuscript.title.gsub(/(￥r￥n|￥r|￥n)/, "") %></td>
-      <td><%= manuscript.job_content.gsub(/(￥r￥n|￥r|￥n)/, "") %></td>
-      <td><%= manuscript.remarks.gsub(/(￥r￥n|￥r|￥n)/, "") %></td>
-      <td><%= link_to '詳細', manuscript %></td>
-    </tr>
+<div class="container">
+  <h1>類似求人検索</h1>
+  <%= form_tag manuscripts_path, :method => 'get' do %>
+  <%= text_field_tag :search, params[:search] %>
+  <%= submit_tag "Search", :name => nil %>
   <% end %>
-</table>
+  <table>
+    <thead>
+      <tr>
+        <th width='10%'>タイトル</th>
+        <th width='60%'>お仕事内容</th>
+        <th width='25%'>備考</th>
+        <!-- <th colspan="3"></th> -->
+      </tr>
+    </thead>
+    <% @manuscripts.each do |manuscript|%>
+      <tr>
+        <td><%= manuscript.title.gsub(/(￥r￥n|￥r|￥n)/, "") %></td>
+        <td><%= manuscript.job_content.gsub(/(￥r￥n|￥r|￥n)/, "") %></td>
+        <td><%= manuscript.remarks.gsub(/(￥r￥n|￥r|￥n)/, "").truncate(50) %></td>
+        <td><%= link_to '詳細', manuscript %></td>
+      </tr>
+    <% end %>
+  </table>
+</div>
