--- a/manuscript_service/app/assets/stylesheets/application.scss
+++ b/manuscript_service/app/assets/stylesheets/application.scss
@@ -24,3 +24,12 @@
     float:none;
 }
 }
+body {
+	background-color:#dce2ed;
+	padding-top: 55px;
+	padding-bottom: 50px;
+	font-family: "Hiragino Maru Gothic Pro"
+}
+td,tr{
+  font-family: "Hiragino Maru Gothic Pro"
+}
