--- a/manuscript_service/app/assets/stylesheets/application.scss
+++ b/manuscript_service/app/assets/stylesheets/application.scss
@@ -30,6 +30,19 @@ body {
 	padding-bottom: 50px;
 	font-family: "Hiragino Maru Gothic Pro"
 }
+
 td,tr{
   font-family: "Hiragino Maru Gothic Pro"
+}
+
+tr:hover {
+    background-color: white;
+		box-shadow: 0px 0px 10px orange;
+		// border-right: solid 5px #ffc06e; //なぜかずれるので不採用
+		transition: background-color 0.6s, box-shadow 0.6s, border-right 0s;
+}
+
+tr.highlight {
+	box-shadow: 0px 0px 10px red;
+	background-color: #fff4fe;
 }
