--- a/manuscript_service/app/assets/stylesheets/application.scss
+++ b/manuscript_service/app/assets/stylesheets/application.scss
@@ -46,3 +46,8 @@ tr.highlight {
 	box-shadow: 0px 0px 10px red;
 	background-color: #fff4fe;
 }
+
+.box{
+	border: 1px solid;
+	background-color: white;
+}
