--- a/manuscript_service/app/views/view/show_result.html.erb
+++ b/manuscript_service/app/views/view/show_result.html.erb
@@ -4,22 +4,10 @@
   <%= text_field_tag :search, params[:search] %>
   <%= submit_tag "Search", :name => nil %>
   <% end %>
-  <table>
-    <thead>
-      <tr>
-        <th width='10%'>タイトル</th>
-        <th width='60%'>お仕事内容</th>
-        <th width='25%'>備考</th>
-        <!-- <th colspan="3"></th> -->
-      </tr>
-    </thead>
     <% @manuscripts.each do |manuscript|%>
-      <tr>
-        <td><%= manuscript.title.gsub(/(￥r￥n|￥r|￥n)/, "") %></td>
-        <td><%= manuscript.job_content.gsub(/(￥r￥n|￥r|￥n)/, "") %></td>
-        <td><%= manuscript.remarks.gsub(/(￥r￥n|￥r|￥n)/, "").truncate(50) %></td>
-        <td><%= link_to '詳細', manuscript %></td>
-      </tr>
+      <%= manuscript.title.gsub(/(￥r￥n|￥r|￥n)/, "") %>
+      <%= manuscript.job_content.gsub(/(￥r￥n|￥r|￥n)/, "") %>
+      <%= manuscript.remarks.gsub(/(￥r￥n|￥r|￥n)/, "").truncate(50) %>
+      <%= link_to '詳細', manuscript %>
     <% end %>
-  </table>
 </div>
